# QualcommAILearn

./: .gitignore  Readme.md  build_android.sh  input_list.txt  postprocess_output.py  preprocess_image.py  prompt.txt
bench/: gpu_execution.md
bench/cnn/: cpu_execution.md  gpu_execution.md  npu_execution.md
genie-t2t-run/: CMakeLists.txt  main.cpp
